<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="false">

    <ImageView
        android:id="@+id/imageTesoura"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        android:onClick="tesouraJogada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imagePapel"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/tesoura_icon" />

    <ImageView
        android:id="@+id/imagePedra"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        android:onClick="pedraJogada"
        app:layout_constraintEnd_toStartOf="@+id/imagePapel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/pedra_icon" />

    <ImageView
        android:id="@+id/imagePapel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@color/teal_700"
        android:onClick="papelJogada"
        app:layout_constraintEnd_toStartOf="@+id/imageTesoura"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imagePedra"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/papel_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/escolhaDoApp"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/jogadaApp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="26dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/android_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_border"
        android:drawableLeft="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:padding="10dp"
        android:text="@string/escolhaAbaixoSuaJogada"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jogadaApp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarNivel"
        app:layout_constraintVertical_bias="0.956" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_border"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/jogadaApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/platina"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="gone"
            app:srcCompat="@drawable/trofeu_platina" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voce"
            android:textColor="@color/teal_200"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pontuacaoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pontuacao"
            android:textColor="@color/teal_700" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/teal_700" />

        <TextView
            android:id="@+id/nivelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel"
            android:textColor="@color/teal_700" />

        <TextView
            android:id="@+id/nivelJogador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nenhum."
            android:textColor="@color/teal_700" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_border_bot"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/jogadaApp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oponente"
            android:textColor="@color/red_Black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pontuacao_oponente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pontuacao_Bot"
            android:textColor="@color/red"
            tools:layout_editor_absoluteX="269dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/pontuacao_int_oponente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/red"
            tools:layout_editor_absoluteX="269dp"
            tools:layout_editor_absoluteY="34dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/starOponente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageView
        android:id="@+id/starJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/bottomMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/textview_border_menu"
        android:drawableLeft="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:padding="5dp"
        android:text="@string/conquista"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePapel" />

    <ImageView
        android:id="@+id/linkedinIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:onClick="linkedinRedir"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarNivel"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/linkedin" />


</androidx.constraintlayout.widget.ConstraintLayout>